--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,31 +3,7 @@
 {% block title %}Connexion{% endblock %}
 
 {% block body %}
-{#<form method="post">#}
-{#    {% if error %}#}
-{#        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
-{#    {% endif %}#}
 
-{#    {% if app.user %}#}
-{#        <div class="mb-3">#}
-{#            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>#}
-{#        </div>Email#}
-{#    {% endif %}#}
-
-{#    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>#}
-{#    <label for="inputEmail">Email</label>#}
-{#    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>#}
-{#    <label for="inputPassword">Password</label>#}
-{#    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>#}
-
-{#    <input type="hidden" name="_csrf_token"#}
-{#           value="{{ csrf_token('authenticate') }}"#}
-{#    >#}
-
-{#    <button class="btn btn-lg btn-primary" type="submit">#}
-{#        Sign in#}
-{#    </button>#}
-{#</form>#}
 
     <div class="container form-white" style="width: 23rem; padding-top: 10rem">
         <form method="post">
@@ -45,13 +21,13 @@
             <h1 class="h3 mb-3 font-weight-normal">Me connecter</h1>
             <!-- Email input -->
             <div class="form-outline mb-4">
-                <input type="email" id="inputEmail" class="form-control text-white" value="{{ last_username }}"/>
+                <input type="email" id="inputEmail" class="form-control text-white" value="{{ last_username }}" style="background: #8d3f7e"/>
                 <label class="form-label" for="inputEmail">Email</label>
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-4">
-                <input type="password" id="inputPassword" class="form-control text-white" />
+                <input type="password" id="inputPassword" class="form-control text-white" style="background: #8d3f7e" />
                 <label class="form-label" for="inputPassword">Mot de passe</label>
             </div>
 
@@ -76,11 +52,11 @@
             </div>
 
             <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">Me connecter</button>
+            <button type="submit" class="btn btn-primary btn-block mb-4 " style="background: #8d3f7e">Me connecter</button>
 
             <!-- Register buttons -->
             <div class="text-center">
-                <p>Pas encore membre ? <a href="#!">S'inscrire</a></p>
+                <p>Pas encore membre ? <a href="{{ path('app_register') }}">S'inscrire</a></p>
                 <p>Où s'inscrire avec :</p>
                 <button type="button" class="btn btn-secondary btn-floating mx-1">
                     <i class='bx bxl-facebook-circle' style='color:#3b71ca' ></i>
