--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -47,7 +47,7 @@
 
                 <div class="col">
                     <!-- Simple link -->
-                    <a href="#!">Mot de passe oublié</a>
+                    <a href="#">Mot de passe oublié</a>
                 </div>
             </div>
 
