--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -21,15 +21,16 @@
             <h1 class="h3 mb-3 font-weight-normal">Me connecter</h1>
             <!-- Email input -->
             <div class="form-outline mb-4">
-                <input type="email" id="inputEmail" class="form-control text-white" value="{{ last_username }}" style="background: #8d3f7e"/>
+                <input type="email" id="inputEmail" class="form-control text-white" value="{{ last_username }}" style="background: #8d3f7e" name="email"/>
                 <label class="form-label" for="inputEmail">Email</label>
             </div>
 
             <!-- Password input -->
             <div class="form-outline mb-4">
-                <input type="password" id="inputPassword" class="form-control text-white" style="background: #8d3f7e" />
+                <input type="password" id="inputPassword" class="form-control text-white" style="background: #8d3f7e" name="password"/>
                 <label class="form-label" for="inputPassword">Mot de passe</label>
             </div>
+
 
             <input type="hidden" name="_csrf_token"
                    value="{{ csrf_token('authenticate') }}"
