--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,7 +21,20 @@
     </head>
     <body>
     <div class="container-fluide bg-tertiary">
+
         {% include '_partials/_nav.html.twig' %}
+
+        {% if app.user and app.user.isVerified == false %}
+            <div class="alert alert-warning alert-dismissible" role="alert">
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                <div class="alert-message">
+                    <strong>Votre compte n'est pas activé</strong>, renvoyer le lien d'activation
+                </div>
+            </div>
+        {% endif %}
+
+        {% include '_partials/_flash.html.twig' %}
+
         {% block body %}{% endblock %}
         {% include '_partials/_footer.html.twig' %}
     </div>
