:hammer: Réinitialisation mot de passe

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -48,7 +48,7 @@
 
                 <div class="col">
                     <!-- Simple link -->
-                    <a href="#">Mot de passe oublié</a>
+                    <a href="{{ path('forgotten_password') }}">Mot de passe oublié</a>
                 </div>
             </div>
 
