:hammer: index.html.twig main modif

--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -17,8 +17,7 @@
                         <a class="nav-link" aria-current="page" href="{{ path('app_main') }}">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" rel="nofollow"
-                           target="_blank">Catégories</a>
+                        <a class="nav-link" href="{{ path('app_category') }}" rel="nofollow">Catégories</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" target="_blank">A propos</a>
