--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -136,8 +136,8 @@
 
                 <div class="row">
                     {% for category in categories %}
-                    <div class="col-lg-4 col-md-12 mb-4">
-                        <div class="card">
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="card"style="width: 20rem; height: 25rem">
                             <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
                                 <img src="{{ category.categoryPicture }}" class="img-fluid" />
                                 <a href="#!">
