:hammer: details.html.twig ajout

--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -20,6 +20,9 @@
                         <a class="nav-link" href="{{ path('app_category') }}" rel="nofollow">Catégories</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('product_index') }}">Nos armes</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#" target="_blank">A propos</a>
                     </li>
                 </ul>
