--- a/templates/product/details.html.twig
+++ b/templates/product/details.html.twig
@@ -8,44 +8,70 @@
     <section class="text-center mt-5">
         <h1 class="mb-5"><strong>Détails</strong></h1>
 
-{#        <div class="row">#}
-{#                <div class="col-lg-4 col-md-6 mb-4">#}
-{#                    <div class="card" style="width: 20rem; height: 25rem">#}
-{#                        <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">#}
-{#                            <img src="{{  }}" class="img-fluid" />#}
-{#                            <a href="#!">#}
-{#                                <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>#}
-{#                            </a>#}
-{#                        </div>#}
-{#                        <div class="card-body">#}
-{#                            <h5 class="card-title">{{ product.productLabel }}</h5>#}
-{#                            <p class="card-text">#}
-{#                                {{ product.productDescription }}#}
-{#                            </p>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-
-{#        </div>#}
 
     </section>
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3 col-12" style="max-width: 1280px;">
         <div class="row g-0">
-            <div class="col-md-4">
-                <img
-                        src="https://mdbcdn.b-cdn.net/wp-content/uploads/2020/06/vertical.webp"
-                        alt="Trendy Pants and Shoes"
-                        class="img-fluid rounded-start bg-image hover-overlay ripple"
-                />
+            <div class="col-md-7">
+{#                <img#}
+{#                        src="https://previews.123rf.com/images/artfully/artfully2104/artfully210400020/167100389-armes-et-%C3%A9quipements-militaires-pour-l-arm%C3%A9e-fusil-d-assaut-m4a1-sur-fond-d-uniforme-militaire.jpg"#}
+{#                        alt="Trendy Pants and Shoes"#}
+{#                        class="rounded-start bg-image img-fluid"/>#}
+                <div id="carouselProduct" class="carousel slide carousel-fade" data-mdb-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button
+                                type="button"
+                                data-mdb-target="#carouselProduct"
+                                data-mdb-slide-to="0"
+                                class="active"
+                                aria-current="true"
+                                aria-label="Slide 1"
+                        ></button>
+                        <button
+                                type="button"
+                                data-mdb-target="#carouselProduct"
+                                data-mdb-slide-to="1"
+                                aria-label="Slide 2"
+                        ></button>
+                        <button
+                                type="button"
+                                data-mdb-target="#carouselProduct"
+                                data-mdb-slide-to="2"
+                                aria-label="Slide 3"
+                        ></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="{{ asset('assets/css/img/armes1.jpg') }}" class="d-block img-fluid" alt="Armes"/>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ asset('assets/css/img/armes2.jpg') }}" class="d-block w-100" alt="Armes 2"/>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="{{ asset('assets/css/img/armes3.jpg') }}" class="d-block w-100" alt="Armes 3"/>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-mdb-target="#carouselProduct" data-mdb-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-mdb-target="#carouselProduct" data-mdb-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
-            <div class="col-md-8 d-flex justify-content-between">
+            <div class="col-md-5 d-flex justify-content-between">
                 <div class="card-body">
-                    <h5 class="card-title">{{ product.productLabel }}</h5>
+                    <h5 class="card-title h2">{{ product.productLabel }}</h5>
                     <p class="card-text">{{ product.productDescription }}</p>
+                    <p>Catégorie : {{ product.category.categoryName }}</p>
                     <p class="card-text">
-                        <small class="text-muted">{{ product.productPrice }} euros</small>
+                        <small class="text-muted h5"><strong>Prix : {{ product.productPrice }} euros</strong></small>
                     </p>
-                    <a href="#" class="btn btn-outline-danger">Ajouter au panier</a>
+                    <div class="d-flex justify-content-end" style="padding-top: 5rem">
+                        <a href="#" class="btn btn-outline-danger">Ajouter au panier</a>
+                    </div>
                 </div>
             </div>
         </div>
