:rocket: Ajout du panier

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,7 @@
 
 {#        Fichier JS #}
         <!-- MDB -->
+        <script src="https://kit.fontawesome.com/edc67385a7.js" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
         <script src="{{ asset('assets/js/scripts.js') }}"></script>
         {% block javascripts %}{% endblock %}
