:rocket: Ajout du panier et de la mise en commande

--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -31,7 +31,7 @@
                     <!-- Icons -->
                     {% if app.user %}
                         <li class="nav-item me-3 me-lg-0">
-                            <a class="nav-link" href="#" rel="nofollow">
+                            <a class="nav-link" href="{{ path('cart_index') }}" rel="nofollow">
                                 <i class='bx bxs-cart' style='color:#ffffff' ></i>
                             </a>
                         </li>
