--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Accueil{% endblock %} - TheGoldenGun</title>
-        <link rel="icon" href="{{ asset('assets/css/img/logo.png') }}">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Accueil{% endblock %} - TheGoldenGun</title>
+    <link rel="icon" href="{{ asset('assets/css/img/logo.png') }}">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-{#        Feuilles de styles #}
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <!-- MDB -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet">
-        {% block stylesheets %}{% endblock %}
-        <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+    {#        Feuilles de styles #}
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset('assets/css/styles.css') }}">
+    {% block stylesheets %}{% endblock %}
 
-{#        Fichier JS #}
-        <!-- MDB -->
-        <script src="https://kit.fontawesome.com/edc67385a7.js" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
-        <script src="{{ asset('assets/js/scripts.js') }}"></script>
-        {% block javascripts %}{% endblock %}
-    </head>
-    <body>
-    <div class="container-fluide bg-tertiary">
+    {% block javascripts %}{% endblock %}
+</head>
+<body>
+<div class="container-fluide bg-tertiary">
 
-        {% include '_partials/_nav.html.twig' %}
+    {% include '_partials/_nav.html.twig' %}
 
-        {% if app.user and app.user.isVerified == false %}
-            <div class="alert alert-warning alert-dismissible" role="alert">
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                <div class="alert-message">
-                    <strong>Votre compte n'est pas activé</strong><a href="{{ path('resend_verif') }}">, renvoyer le lien d'activation</a>
-                </div>
+    {% if app.user and app.user.isVerified == false %}
+        <div class="alert alert-warning alert-dismissible zindex" role='alert'>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            <div class="alert-message">
+                <strong>Votre compte n'est pas activé</strong><a href="{{ path('resend_verif') }}">, renvoyer le lien
+                    d'activation</a>
             </div>
-        {% endif %}
+        </div>
+    {% endif %}
 
-        {% include '_partials/_flash.html.twig' %}
+    {% include '_partials/_flash.html.twig' %}
 
-        {% block body %}{% endblock %}
-        {% include '_partials/_footer.html.twig' %}
-    </div>
+    {% block body %}{% endblock %}
+    {% include '_partials/_footer.html.twig' %}
 
-    </body>
+</div>
+{#        Fichier JS #}
+<!-- MDB -->
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/edc67385a7.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+<script src="{{ asset('assets/js/scripts.js') }}"></script>
+
+</body>
 </html>
