--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -85,11 +85,11 @@
         <!-- Controls -->
         <a class="carousel-control-prev" href="#introCarousel" role="button" data-mdb-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only"><i class='bx bx-chevron-left' style='color:#ffffff' ></i></span>
+            <span class="sr-only"><i class='bx bx-chevron-left' style='color:#ffffff'></i></span>
         </a>
         <a class="carousel-control-next" href="#introCarousel" role="button" data-mdb-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only"><i class='bx bx-chevron-right' style='color:#ffffff' ></i></span>
+            <span class="sr-only"><i class='bx bx-chevron-right' style='color:#ffffff'></i></span>
         </a>
     </div>
     <!-- Carousel wrapper -->
@@ -101,8 +101,9 @@
             <section>
                 <div class="row">
                     <div class="col-md-6 gx-5 mb-4">
-                        <div class="bg-image hover-overlay ripple shadow-2-strong rounded-5" data-mdb-ripple-color="light">
-                            <img src="{{ asset('assets/css/img/landing.jpg') }}" class="img-fluid" />
+                        <div class="bg-image hover-overlay ripple shadow-2-strong rounded-5"
+                             data-mdb-ripple-color="light">
+                            <img src="{{ asset('assets/css/img/landing.jpg') }}" class="img-fluid"/>
                             <a href="#!">
                                 <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                             </a>
@@ -128,7 +129,7 @@
 
             <!--Section: Content-->
 
-            <hr class="my-5" />
+            <hr class="my-5"/>
 
             <!--Section: Content-->
             <section class="text-center">
@@ -136,75 +137,75 @@
 
                 <div class="row">
                     {% for category in categories %}
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card"style="width: 20rem; height: 25rem">
-                            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                                <img src="{{ category.categoryPicture }}" class="img-fluid" />
-                                <a href="#!">
-                                    <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-                                </a>
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">{{ category.categoryName }}</h5>
-                                <p class="card-text">
-                                    Some quick example text to build on the card title and make up the bulk of the
-                                    card's content.
-                                </p>
-                                <a href="#!" class="btn btn-primary">Voir</a>
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="card" style="width: 20rem; height: 25rem">
+                                <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                                    <img src="{{ category.categoryPicture }}" class="img-fluid"/>
+                                    <a href="#!">
+                                        <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+                                    </a>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ category.categoryName }}</h5>
+                                    <p class="card-text">
+                                        Some quick example text to build on the card title and make up the bulk of the
+                                        card's content.
+                                    </p>
+                                    <a href="#!" class="btn btn-primary">Voir</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
                     {% endfor %}
 
                 </div>
             </section>
             <!--Section: Content-->
 
-            <hr class="my-5" />
+            <hr class="my-5"/>
         </div>
     </main>
 
-{#    <section class="main">#}
-{#        <div class="card-text">#}
-{#            <div class="titre">#}
-{#                <h1>Bienvenue sur le site The Golden Gun</h1>#}
-{#            </div>#}
-{#            <div class="text-bandeau">#}
-{#                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et non provident saepe vel veritatis. Asperiores facere modi ratione vel velit.</p>#}
-{#            </div>#}
-{#        </div>#}
-{#        <div class="main-container">#}
-{#            <div class="card" style="--clr: #009688">#}
-{#                <div class="imgBx">#}
-{#                    <img src="{{ asset('assets/css/img/222109.jpg') }}" alt="produit">#}
-{#                </div>#}
-{#                <div class="content">#}
-{#                    <h2>Salam</h2>#}
-{#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>#}
-{#                    <a href="#">Read more</a>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="card" style="--clr: #ff3e7f">#}
-{#                <div class="imgBx">#}
-{#                    <img src="{{ asset('assets/css/img/background.jpg') }}" alt="produit">#}
-{#                </div>#}
-{#                <div class="content">#}
-{#                    <h2>Shalom</h2>#}
-{#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>#}
-{#                    <a href="#">Read more</a>#}
-{#                </div>#}
-{#            </div>#}
-{#            <div class="card" style="--clr: #04a9f4">#}
-{#                <div class="imgBx">#}
-{#                    <img src="{{ asset('assets/css/img/background2.jpg') }}" alt="produit">#}
-{#                </div>#}
-{#                <div class="content">#}
-{#                    <h2>Salut</h2>#}
-{#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p>#}
-{#                    <a href="#">Read more</a>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </section>#}
+    {#    <section class="main"> #}
+    {#        <div class="card-text"> #}
+    {#            <div class="titre"> #}
+    {#                <h1>Bienvenue sur le site The Golden Gun</h1> #}
+    {#            </div> #}
+    {#            <div class="text-bandeau"> #}
+    {#                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et non provident saepe vel veritatis. Asperiores facere modi ratione vel velit.</p> #}
+    {#            </div> #}
+    {#        </div> #}
+    {#        <div class="main-container"> #}
+    {#            <div class="card" style="--clr: #009688"> #}
+    {#                <div class="imgBx"> #}
+    {#                    <img src="{{ asset('assets/css/img/222109.jpg') }}" alt="produit"> #}
+    {#                </div> #}
+    {#                <div class="content"> #}
+    {#                    <h2>Salam</h2> #}
+    {#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p> #}
+    {#                    <a href="#">Read more</a> #}
+    {#                </div> #}
+    {#            </div> #}
+    {#            <div class="card" style="--clr: #ff3e7f"> #}
+    {#                <div class="imgBx"> #}
+    {#                    <img src="{{ asset('assets/css/img/background.jpg') }}" alt="produit"> #}
+    {#                </div> #}
+    {#                <div class="content"> #}
+    {#                    <h2>Shalom</h2> #}
+    {#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p> #}
+    {#                    <a href="#">Read more</a> #}
+    {#                </div> #}
+    {#            </div> #}
+    {#            <div class="card" style="--clr: #04a9f4"> #}
+    {#                <div class="imgBx"> #}
+    {#                    <img src="{{ asset('assets/css/img/background2.jpg') }}" alt="produit"> #}
+    {#                </div> #}
+    {#                <div class="content"> #}
+    {#                    <h2>Salut</h2> #}
+    {#                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolor eligendi facilis id illum laborum officia pariatur quod, repellendus repudiandae!</p> #}
+    {#                    <a href="#">Read more</a> #}
+    {#                </div> #}
+    {#            </div> #}
+    {#        </div> #}
+    {#    </section> #}
 
 {% endblock %}
