--- a/templates/product/details.html.twig
+++ b/templates/product/details.html.twig
@@ -6,7 +6,7 @@
 <div class="container m-5">
     <!--Section: Content-->
     <section class="text-center mt-5">
-        <h1 class="mb-5"><strong>Détails</strong></h1>
+        <h1 class="mb-5"><strong>{{ product.productLabel }}</strong></h1>
     </section>
     <div class="card mb-3 col-12" style="max-width: 1280px;">
         <div class="row g-0">
