--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark d-lg-block" style="z-index: 2000;">
         <div class="container-fluid">
             <!-- Navbar brand -->
-            <a class="navbar-brand nav-link" target="_blank" href="https://mdbootstrap.com/docs/standard/">
+            <a class="navbar-brand nav-link" href={{ path('app_main') }}>
                 <strong>TheGoldenGun</strong>
             </a>
             <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="{{ path('product_index') }}">Nos armes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" target="_blank">A propos</a>
+                        <a class="nav-link" href="#">A propos</a>
                     </li>
                 </ul>
 
